<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sunlookup">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="250dp"
        android:layout_height="800dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/textView_rise"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sunrise"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_set"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sunset"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/lat"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_lat"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="@string/enterNumber"
            android:numeric="signed|decimal"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/longitude"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_longitut"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="@string/enterNumber"
            android:numeric="signed|decimal"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/lookup"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_read"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/view"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:text="@string/favourate"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="0dp"
        android:text="@string/latlgt"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/favourite" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="150dp"
        android:layout_height="600dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toRightOf="@+id/linear_layout"
        app:layout_constraintRight_toRightOf="parent"
        />


    <include
        android:id="@+id/include"
        layout="@layout/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>