...
        android:id="@+id/home_id"
        android:title="@string/home"
        android:icon="@drawable/homeicon"/>


    <item
        android:id="@+id/first_id"
        android:title="@string/first"
        android:icon="@drawable/icon_sunrise"/>

    <item
        android:id="@+id/second_id"
        android:title="@string/second"
...
